added unit tests for pojos, ensure sorting of violations